Modifying the Elasticsearch provision script